# RealEstate

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.codex/: codex-os.manifest.json  verify.commands
.codex/actions/: _artifact_env.sh  run_frontend_checks.sh  run_rust_checks.sh  setup_local_env.sh
.codex/scripts/: run_verify_commands.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql.yml  git-hygiene.yml  lockfile-rationale.yml  perf-enforced.yml  (+4 more)
.perf-baselines/: build-time.json  bundle.json
docs/: ARCHITECTURE.md  CSV_IMPORT_REFERENCE.md  PORTFOLIO-DISPOSITION.md  RELEASE_RUNBOOK.md  SUPPORT_RUNBOOK.md  TROUBLESHOOTING.md  USER_GUIDE.md
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/migrations/: 20240201000001_phase3_enhancements.sql  20260310000001_normalize_settings_defaults.sql
src-tauri/src/: error.rs  lib.rs  license.rs
src-tauri/src/ai/: brand_voice.rs  client.rs  email_generator.rs  listing_generator.rs  prompts.rs  social_generator.rs
src-tauri/src/commands/: brand_voice.rs  export.rs  generate.rs  license.rs  photos.rs  property.rs  settings.rs
src-tauri/src/db/: analytics.rs  brand_voice.rs  photos.rs  settings.rs
src-tauri/src/export/: docx.rs  pdf.rs  templates.rs
src-tauri/src/import/: csv.rs
src-tauri/src/photos/: manager.rs
src-tauri/tests/commands/: property_test.rs
src-tauri/tests/common/: db_setup.rs  fixtures.rs  mock_api.rs  mod.rs
src-tauri/tests/integration/: e2e_test.rs
(+44 files in other folders)
