[package]
name = "realestate"
version = "0.1.0"
description = "Real Estate Listing Optimizer"
authors = ["you"]
edition = "2021"

[lib]
name = "realestate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
genpdf = { version = "0.2", features = ["images"] }
docx-rs = "0.4"
hostname = "0.4"
csv = "1.3"

[dev-dependencies]
mockito = "1.2"
tokio = { version = "1", features = ["full", "test-util"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }

[profile.test]
opt-level = 1
